--- a/docker/pg-express/docker-compose.yml
+++ b/docker/pg-express/docker-compose.yml
@@ -16,5 +16,8 @@ services:
         ports:
             - 8080:8080
         command: npm run dev
+        volumes:
+            - .:/app
+            - /app/node_modules
         depends_on:
             - db
